Fix footer copyright text breaking on small screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -370,6 +370,12 @@ footer .links-group > a:after {
   padding: 2rem 0;
 }
 
+.footer-content .footer-bottom p {
+  text-wrap: nowrap;
+  word-break: keep-all;
+  white-space: nowrap;
+}
+
 .line {
   width: 100%;
   height: 4px;
